@@ -1,20 +1,21 @@
 import java.util.ArrayList;
+import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    ArrayList<Task> historyList = new ArrayList<>();
+    List<Task> historyList = new ArrayList<>();
 
     @Override
-    public void add(Task task) {
+    public void addToHistoryList(Task task) {
         if (historyList.size() < 10) {
             historyList.add(task);
         } else {
-            historyList.remove(0);
+            historyList.removeFirst();
             historyList.add(task);
         }
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public List<Task> getHistory() {
         return historyList;
     }
 }
